# flutter_ffi_examples

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_ffi_examples/: FlutterFfiExamplesPlugin.kt
build-deps/: README.md  build-libcmocka-android.sh  build-libcmocka-ios.sh  build-libopencv-android.sh  build-libopencv-ios.sh  build-libsodium-android.sh  build-libsodium-ios.sh  copy-eigen.sh  libsodium-apple-xcframework-modified.sh
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_ffi_examples_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_ffi_examples.podspec
ios/Classes/: FlutterFfiExamplesPlugin.h  FlutterFfiExamplesPlugin.m  NativeCmocka.c  NativeEigen.cpp  NativeLibsodium.cpp  NativeOpencv.cpp  SwiftFlutterFfiExamplesPlugin.swift
lib/: flutter_ffi_examples.dart
test/: flutter_ffi_examples_test.dart
